services/media-services/prowlarr/resources/deployment-prowlarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media-prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
              name: prowlarr
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
