services/media-services/prowlarr/resources/service-prowlarr.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-prowlarr
spec:
  ports:
    - name: prowlarr
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
