services/media-services/prowlarr/resources/ingress-prowlarr.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media-prowlarr
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`prowlarr.nebulanet.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          kind: Service
          port: 9696
  tls:
    secretName: prowlarr-tls
